<resources>
    <string name="app_name">FlooringIconManager</string>
    <string name="title_activity_edit">Edit</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id">OEY0Wls5ko61tRZS8VLC36ve9ZscOoQDW6snPK6v</string>
    <string name="back4app_client_key">RPSJ1xhpcH3ik3UFYSn5FrjSMWe3hrvm9YDTWpSH</string>
    <string name="invalid_user_password">Invalid user/password</string>
    <string name="error_not_email_format">Username must be in the form of an email</string>
    <string name="error_invalid_creds">Invalid username/password.</string>
    <string name="error_short_pw">Password must have at least 5 characters</string>
    <string name="error_signup_existing_account">Account already exists for this username.</string>
    <string name="error_empty_username">username/email is required</string>
</resources>